# captcha-solver

./: .gitignore  README.md  pyproject.toml
src/: Explore.ipynb  claude_nn.py  jahongir_yolov8.py  main.py
src/data_loading/: loader.py
src/model/: crnn.py
