[tool.poetry]
name = "captcha-solver"
version = "0.1.0"
description = ""
authors = ["freelectron <doermax@outlook.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.9"
torch = "^2.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
